tdf#100446 fix compatibilty issues with Excel.

Use cases added to the unit test showed various differences in results
between Calc and Excel. The code changes makes Calc now return the same
results as Excel, even if the result is somewhat unexpected.

Change-Id: I348f7f2cc2c39a30f4db68dbed98b03de48f1ff5
Reviewed-on: https://gerrit.libreoffice.org/26544
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>